--- a/src/component/projects/projects.scss
+++ b/src/component/projects/projects.scss
@@ -27,6 +27,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        overflow: hidden;
         height: 100%;
         width: 100%;
 
@@ -80,7 +81,7 @@
 
                 p {
                     color: grey;
-                    font-size: 30px;
+                    font-size: 20px;
 
                     @include mobile {
                         font-size: 16px;
