--- a/src/component/resume/resume.scss
+++ b/src/component/resume/resume.scss
@@ -46,6 +46,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding: 10px;
 
         @include mobile {
             width: 100%;
@@ -110,12 +111,14 @@
         margin: auto;
         padding: auto;
         justify-content: center;
+        gap: 20px;
 
         @include mobile {
             flex-direction: column;
             width: 100%;
             padding: 10px;
             top: 0;
+            gap: 10px;
         }
         
         .box {
